--- a/swBlog/app/views/layouts/application.html.erb
+++ b/swBlog/app/views/layouts/application.html.erb
@@ -9,11 +9,17 @@
 <style type="text/css">
   .body{
       margin: 0 auto;
-      width: 90%;
+      width: 100%;
+  }
+  .navbar{
+    margin-bottom: 0px;
+    background-color: transparent;
+    z-index: 1;
+    border-width: 0px;
   }
 </style>
 <body>
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default"  role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -51,8 +57,8 @@
         <button type="submit" class="btn btn-default">搜索</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">登录</a></li>
-        <li><a href="#">注册</a></li>
+        <li><a href="#"><font color ="#fff">登录</font></a></li>
+        <li><a href="#"><font color ="#fff">注册</font></a></li>
         <!--<li class="dropdown">-->
           <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>-->
           <!--<ul class="dropdown-menu" role="menu">-->
