--- a/swBlog/app/views/layouts/application.html.erb
+++ b/swBlog/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
         <button type="submit" class="btn btn-default">搜索</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="<%= new_session_path %>"><font color ="#fff">登录</font></a>
+        <li><a href="<%= new_user_session_path %>"><font color ="#fff">登录</font></a>
         </li>
         <li><a href="<%= new_user_path %>"><font color ="#fff">注册</font></a></li>
         <!--<li class="dropdown">-->
