--- a/swBlog/app/views/layouts/application.html.erb
+++ b/swBlog/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   }
   .navbar{
     margin-bottom: 0px;
-    background-color: transparent;
+    background-color: #F0F0F0;
     z-index: 1;
     border-width: 0px;
   }
@@ -50,26 +50,34 @@
           <!--</ul>-->
         <!--</li>-->
       <!--</ul>-->
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">搜索</button>
-      </form>
+      <% if current_user %>
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="个人博客搜索">
+          </div>
+          <button type="submit" class="btn btn-default">搜索</button>
+        </form>
+      <% end %>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="<%= new_user_session_path %>"><font color ="#fff">登录</font></a>
+        <% if current_user %>
+          <li><a href="#"><font color = blue><%= current_user.email %></font></a></li>
+          <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><%= link_to '退出', login_out_user_sessions_path, method: :delete, data: { confirm: '确定退出吗?' },
+          class: "btn btn-danger left" %></li>
+        <% else %>
+          <li><a href="<%= login_in_user_sessions_path %>"><font color = "#5E5E5E">登录</font></a></li>
+          <li><a href="<%= new_user_path %>"><font color ="#5E5E5E">注册</font></a></li>
+        <% end %>
+        
+        
+          </ul>
         </li>
-        <li><a href="<%= new_user_path %>"><font color ="#fff">注册</font></a></li>
-        <!--<li class="dropdown">-->
-          <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>-->
-          <!--<ul class="dropdown-menu" role="menu">-->
-            <!--<li><a href="#">Action</a></li>-->
-            <!--<li><a href="#">Another action</a></li>-->
-            <!--<li><a href="#">Something else here</a></li>-->
-            <!--<li class="divider"></li>-->
-            <!--<li><a href="#">Separated link</a></li>-->
-          <!--</ul>-->
-        <!--</li>-->
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
