--- a/swBlog/app/views/users/new.html.erb
+++ b/swBlog/app/views/users/new.html.erb
@@ -3,27 +3,23 @@
 <%= form_for @user, :url => {:action=>'create'} do |form| %>  
 <ul class="formList">  
   <li>  
-    <%= form.label :login, "Username" %>  
+    <%= form.label :login, "用户名" %>  
     <%= form.text_field :login %>  
   </li>  
   <li>  
-    <%= form.label :email, "Email" %>  
+    <%= form.label :email, "邮箱" %>  
     <%= form.text_field :email %>  
   </li>  
   <li>  
-    <%= form.label :password, "Password" %>  
+    <%= form.label :password, "密码" %>  
     <%= form.password_field :password %>  
   </li>  
   <li>  
-    <%= form.label :password_confirmation, "Password confirmation" %>  
+    <%= form.label :password_confirmation, "确认密码" %>  
     <%= form.password_field :password_confirmation %>   
-  </li>  
+  </li>   
   <li>  
-    <%= form.label :nickname, "nickname" %>  
-    <%= form.text_field :nickname %>   
-  </li>  
-  <li>  
-    <%= form.submit "Submit" %>  
+    <%= form.submit "注册" %>  
   </li>  
 </ul>  
 <% end %>  
