--- a/swBlog/app/views/welcome/index.html.erb
+++ b/swBlog/app/views/welcome/index.html.erb
@@ -1,1 +1,25 @@
-welcome ...
+<style type="text/css">
+	.main_head{
+		margin-top: 5px;
+		height: 100px;
+		background-color: red;
+	}
+	.main_body{
+        margin-top: 5px;
+		background-color: blue;
+	}
+	.main_foot{
+		margin-top: 5px;
+		height: 100px;
+		background-color: green;
+	}
+</style>
+
+<div class = "main_head">fdsafasdfasdfsd
+</div>
+<div class = "main_body">fsdafjsdfsdjflsdajflsd;afjdls;akfjadls;kfjdskl;afjsda;klfjsdkla;fjksdlafjksdlfjdkslajfdsklfjsdklfjsdkfjsdkffjkdslfjdsklfjksdlfjdsklfjsdklfjdkslfjdsklfjkdsla;fjklsa;dfjdksla;lkfjsdkla;fjdsaklfjdslkfjdskl;fjsadklfjaksdlfjkdsalfjsdk;lfjsdkalfjsdkla;fjdsaklfjdsaklfjsdkalfjkdsfjsda;kfladjsfkl;dsajfads;lfjasdl;kfjsdfl;jsdkfjdskfsdkfjeeiworuewooeiowpqeiqwepwqeioqwpeioqwpeipwqoeipqwoeipqwoeipwoqeiqwopeiwqpoeiwqpoeiwqpoeiqwpeiqwpoeiwqopeiwqpoeiwqpoeiqpwepwqeopwqeiwoqpe
+</div>
+<div class = "main_foot"></div>
+
+
+
