--- a/swBlog/app/views/users/show.html.erb
+++ b/swBlog/app/views/users/show.html.erb
@@ -1,2 +1,12 @@
 <h1>User#show</h1>
 <p>Find me in app/views/user/show.html.erb</p>
+email:<%= @user.email %><br/>  
+login count:<%= @user.login_count %><br/>  
+failed login count:<%= @user.failed_login_count %><br/>  
+last request at:<%= @user.last_requrest_at %><br/>  
+current login at:<%= @user.current_login_at %><br/>  
+last login at:<%= @user.last_login_at %><br/>  
+current login ip:<%= @user.current_login_ip %><br/>  
+last login ip:<%= @user.last_login_ip %><br/>  
+<%= link_to 'edit', edit_account_path(@user)%>  
+<%= link_to 'logout', user_session_path, :method => 'delete' %>  
