登录注册细节完善

--- a/swBlog/app/views/layouts/application.html.erb
+++ b/swBlog/app/views/layouts/application.html.erb
@@ -82,7 +82,7 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-<div class="body">
+<div class="body" style= "width:90%; align:center;background-color:#eee">
   <%= yield %>
 </div>
 
