--- a/swBlog/app/views/password_resets/new.html.erb
+++ b/swBlog/app/views/password_resets/new.html.erb
@@ -1,8 +1,6 @@
-<h1>Reset Password</h1>
-
-<p>Please enter your email address below and then press "Reset Password".</p>
-
+<h1>忘记密码</h1>
+<span style = "color:red"><%= flash.now[:error] %></span>
 <%= form_tag password_resets_path do %>
-  <%= text_field_tag :email %>
-  <%= submit_tag "Reset Password" %>
+  <%= text_field_tag :email, nil, placeholder: '请输入您注册的邮箱' %>
+  <%= submit_tag "找回密码" %>
 <% end %>
