--- a/swBlog/app/views/layouts/mailer.html.erb
+++ b/swBlog/app/views/layouts/mailer.html.erb
@@ -6,5 +6,5 @@
   request, please follow the link below.
 </p>
 
-<%= link_to "Reset Password!", edit_password_reset_path(id: @user.perishable_token) %>
-<%= puts edit_password_reset_path(id: @user.perishable_token) %>
+<%= link_to "Reset Password!", edit_password_reset_url(id: @user.perishable_token) %>
+<%= puts edit_password_reset_url(id: @user.perishable_token) %>
