--- a/swBlog/app/views/users/show.html.erb
+++ b/swBlog/app/views/users/show.html.erb
@@ -1,11 +1,13 @@
-<h1>User#show</h1>
-<p>Find me in app/views/user/show.html.erb</p>
-email:<%= @user.email %><br/>  
-login count:<%= @user.login_count %><br/>  
-failed login count:<%= @user.failed_login_count %><br/>  
-last request at:<%= @user.last_request_at %><br/>  
-current login at:<%= @user.current_login_at %><br/>  
-last login at:<%= @user.last_login_at %><br/>  
-current login ip:<%= @user.current_login_ip %><br/>  
-last login ip:<%= @user.last_login_ip %><br/>  
+<h1>账户状态</h1>
+<div>
+	邮箱:<%= @user.email %><br/>  
+	登录次数:<%= @user.login_count %><br/>  
+	失败登录次数:<%= @user.failed_login_count %><br/>  
+	最后一次请求时间:<%= @user.last_request_at %><br/>  
+	当前登录时间:<%= @user.current_login_at %><br/>  
+	最后一次登录时间:<%= @user.last_login_at %><br/>  
+	当前登录IP:<%= @user.current_login_ip %><br/>  
+	最后一次登录IP:<%= @user.last_login_ip %><br/> 
+</div>
+ 
  
