将reset_passwords controller rename user_reset_passwords

--- a/swBlog/app/views/notifier/password_reset_intructions.html.erb
+++ b/swBlog/app/views/notifier/password_reset_intructions.html.erb
@@ -6,5 +6,4 @@
   request, please follow the link below.
 </p>
 
-<%= link_to "Reset Password!", edit_password_reset_url(id: @user.perishable_token) %>
-<%= puts edit_password_reset_path(id: @user.perishable_token) %>
+<%= link_to "重置密码!", edit_user_password_reset_url(id: @user.perishable_token) %>
