--- a/swBlog/app/views/user_password_resets/edit.html.erb
+++ b/swBlog/app/views/user_password_resets/edit.html.erb
@@ -2,7 +2,7 @@
 
 <p>请输入您的新密码.</p>
 <span style = "color:red"><%= flash.now[:error] %></span>
-<%= form_tag password_reset_path, :method => :put do %>
+<%= form_tag user_password_reset_path, :method => :put do %>
   <%= label_tag :password,'密码' %>
   <%= password_field_tag :password, nil, placeholder: '请输入新密码' %>
   <%= label_tag :password,'确认密码' %>
