--- a/swBlog/app/views/layouts/application.html.erb
+++ b/swBlog/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
       <% end %>
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
-          <li><a href="#"><font color = blue><%= current_user.login_in_nickname_or_others %></font></a></li>
+          <li><a href="<%= users_path %>"><font color = blue><%= current_user.login_in_nickname_or_others %></font></a></li>
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">更多 <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
