--- a/swBlog/app/views/blogs/new.html.erb
+++ b/swBlog/app/views/blogs/new.html.erb
@@ -1,2 +1,63 @@
-<h1>Blogs#new</h1>
-<p>Find me in app/views/blogs/new.html.erb</p>
+<style type="text/css">
+	.blog_header
+	{
+		height: 80px;
+		background-color: green;
+	}
+	.blog_body
+	{
+		height: 500px;
+	}
+	.blog_body_left
+	{
+		float: left;
+		width: 20%;
+		background-color: white;
+	}
+	.blog_body_right
+	{
+		float: right;
+		width: 80%;
+		background-color: gray;
+	}
+	.blog_body_new
+	{
+		margin: 20px 15px;
+		background-color: red;
+	}
+</style>
+<div class="blog_header">
+	<h1>Blogs#index</h1>
+	<p>Find me in app/views/blogs/index.html.erb</p>
+</div>
+<div class="blog_body">
+	<div class="blog_body_left">
+		<div style="background-color: #ddd;">分类</div>
+	</div>
+	<div class="blog_body_right">
+		<%= form_for @blog, :url =>  {:action=>'create'} do |f| %> 
+		<div class="blog_body_new">
+			<div class="blog_body_add_title">
+				<li>  
+	    	 		<%= f.label :title,"标题" %>  
+	   		 		<%= f.text_field :"title" %>  
+	      		</li>
+	      		<li>  
+	    	 		<%= f.label :tags,"tags" %>  
+	   		 		<%= f.text_field :"tags" %>  
+	      		</li>
+			</div>
+		</div>
+		<div class="blog_body_content">
+			<li>  
+	        	 <%= f.label :"body","内容" %>  
+	        	 <%= f.text_field :"body" %>  
+	     	 </li>
+		</div>  
+	     <li>  
+	         <%= f.submit :'发布' %>  
+	     </li>  
+		<% end %> 
+	</div>
+</div>
+<div class="blog_footer" ></div>
