--- a/swBlog/app/views/blogs/new.html.erb
+++ b/swBlog/app/views/blogs/new.html.erb
@@ -25,6 +25,17 @@
 		margin: 20px 15px;
 		background-color: red;
 	}
+	.blog_body_new .blog_body_add_title
+	{
+		height: 100px;
+		background-color: #eee;
+	}
+	.blog_body_new .blog_body_category
+	{
+		height: 150px;
+		background-color: #bbb;
+	}
+
 </style>
 <div class="blog_header">
 	<h1>Blogs#index</h1>
@@ -47,16 +58,24 @@
 	   		 		<%= f.text_field :"tags" %>  
 	      		</li>
 			</div>
-		</div>
-		<div class="blog_body_content">
+			<div class="blog_body_content">
 			<li>  
-	        	 <%= f.label :"body","内容" %>  
-	        	 <%= f.text_field :"body" %>  
+	        	 <%= f.label :body,"内容" %>  
+	        	 <%= f.text_field :body %>  
 	     	 </li>
-		</div>  
-	     <li>  
-	         <%= f.submit :'发布' %>  
-	     </li>  
+			</div>
+			<div class="blog_body_category">
+				<li>
+					<%= f.label :category_id,"分类" %>  
+		        	<%= f.text_field :category_id %> 
+				</li>
+			</div>  
+				<div>
+					<li>  
+				 <%= f.submit :'发布' %>  
+				</li>
+			</div>
+		</div>
 		<% end %> 
 	</div>
 </div>
