--- a/swBlog/app/views/admin/categories/index.html.erb
+++ b/swBlog/app/views/admin/categories/index.html.erb
@@ -5,8 +5,8 @@
 
 <div style ="height:50px">
 	<div style = "float: left; height: 0px; padding: 0px;">
-	  <h3 style = "margin-top: 15px">分类列表<span style = "font-size:17px; color:blue"> 查询到患者数(<%= @categories.count %>)</span></h3>
-
+	  <h3 style = "margin-top: 15px">分类列表<span style = "font-size:17px; color:blue"> 查询到患者数(<%= @categories.try(:count) %>)</span><%= link_to '新增', new_admin_category_path,class:  "btn btn-primary" %></h3>
+	  
 	</div>
 
 	<div style= "float: right">
@@ -41,7 +41,10 @@
 	        <td><%= category.parent_id %></td>
 	        <td><%= category.created_at %></td>
 	        <td><%= category.updated_at %></td>
-	       <td><%= link_to '新增', new_admin_category_path %></td>
+	        <td>
+	        	<%= link_to '删除', admin_category_path(category), method: :delete, data: { confirm: '确定删除吗?' },
+            class: "btn btn-danger left" %>
+	        </td>
       <% end %>
   </tbody>
 </table>
