--- a/swBlog/app/views/admin/categories/new.html.erb
+++ b/swBlog/app/views/admin/categories/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Admin::Categories#new</h1>
 <p>Find me in app/views/admin/categories/new.html.erb</p>
-<%= form_for(patient,url: categories_path(patient),method: 'post')  do |f| %>
+<%= form_for(@category,url: admin_categories_path(@category),method: 'post')  do |f| %>
 	<div class="row">
 	  <div class="col-md-6">名称</div>
 	  <div class="col-md-6"><%= f.text_field :name %></div>
