添加选择分类功能

--- a/swBlog/app/views/user_categories/index.html.erb
+++ b/swBlog/app/views/user_categories/index.html.erb
@@ -34,9 +34,9 @@
 	        <td><%= category.name %></td>
 	        <td>
 	        	<% if !(@user_category_ids.empty?) && @user_category_ids.include?(category.id) %>
-	        		<%= link_to '点击取消',user_category_path(category[:id],is_used: 0), method: :put%>
+	        		<%= link_to '点击取消',user_category_path(category[:id]), method: :put%>
 	        	<% else %>
-	        		<%= link_to '点击选中', user_category_path(category[:id],is_used: 1),method: :put %>
+	        		<%= link_to '点击选中', user_category_path(category[:id]),method: :put %>
 	        	<% end %>
 	        </td>
       <% end %>
