--- a/swBlog/app/views/blogs/new.html.erb
+++ b/swBlog/app/views/blogs/new.html.erb
@@ -61,7 +61,7 @@
 			<div class="blog_body_content">
 			<li>  
 	        	 <%= f.label :body,"内容" %>  
-	        	 <%= f.cktext_area :body,:id => 'sometext', :ckeditor => {:language => 'zh-cn'} %>  
+	        	 <%= f.text_field :body %>  
 
 	     	 </li>
 			</div>
