--- a/swBlog/app/views/blogs/new.html.erb
+++ b/swBlog/app/views/blogs/new.html.erb
@@ -61,7 +61,7 @@
 			<div class="blog_body_content">
 			<li>  
 	        	 <%= f.label :body,"内容" %>  
-	        	 <%= f.text_field :body %>  
+	        	 <%= f.text_area :body, :class => 'ckeditor' %>
 
 	     	 </li>
 			</div>
