--- a/swBlog/app/views/welcome/index.html.erb
+++ b/swBlog/app/views/welcome/index.html.erb
@@ -1,25 +1,63 @@
 <style type="text/css">
-	.main_head{
-		margin-top: 5px;
-		height: 100px;
-		background-color: red;
+	body{
+		background-color: #333;
+		background-image: url(assets/try_search_bg.jpg);
+		width: 100%;
+		height: 100%;
+		margin: 0 auto;
 	}
-	.main_body{
-        margin-top: 5px;
-		background-color: blue;
+	.search-all-div{
+		/*background-color: #fff;*/
+		margin-top: 50px;
+		margin-left: 50px;
 	}
-	.main_foot{
-		margin-top: 5px;
-		height: 100px;
-		background-color: green;
+	.search_icon{
+		background-image: url(assets/try_search_icon.png);
+		background-size:100%;
+		background-repeat: no-repeat;
+		width: 60px;
+		height: 60px;
+		background-position: center;
+		float: left;
+	}
+	.search-all-div form{
+		background-color: #fff;
+		margin-top: 12px;
+		margin-left: 15px;
+		float: left;
+	}
+	.search_input{
+		border: 0;
+		height: 25px;
+		width: 200px;
+		line-height: 25px;
+		
+		
+		float: left;
+	}
+	.search_commit{
+		border: 0;
+		background-color: #fff;
+		background-image: url(assets/try_search_click.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		background-position: center;
+		width: 29px;
+		height: 29px;
+		float: left;
 	}
 </style>
 
-<div class = "main_head">fdsafasdfasdfsd
-</div>
-<div class = "main_body">fsdafjsdfsdjflsdajflsd;afjdls;akfjadls;kfjdskl;afjsda;klfjsdkla;fjksdlafjksdlfjdkslajfdsklfjsdklfjsdkfjsdkffjkdslfjdsklfjksdlfjdsklfjsdklfjdkslfjdsklfjkdsla;fjklsa;dfjdksla;lkfjsdkla;fjdsaklfjdslkfjdskl;fjsadklfjaksdlfjkdsalfjsdk;lfjsdkalfjsdkla;fjdsaklfjdsaklfjsdkalfjkdsfjsda;kfladjsfkl;dsajfads;lfjasdl;kfjsdfl;jsdkfjdskfsdkfjeeiworuewooeiowpqeiqwepwqeioqwpeioqwpeipwqoeipqwoeipqwoeipwoqeiqwopeiwqpoeiwqpoeiwqpoeiqwpeiqwpoeiwqopeiwqpoeiwqpoeiqpwepwqeopwqeiwoqpe
-</div>
-<div class = "main_foot"></div>
+<body>
+	<div class="search-all-div">
+		<div class="search_icon"></div>
+		<form>
+			<input type="text" class="search_input"/>
+			<input type="submit" value="" placehole="全局搜索" class="search_commit"/> 
+		</form>
+	</div>
+</body>
+
 
 
 
