--- a/swBlog/app/views/blogs/index.html.erb
+++ b/swBlog/app/views/blogs/index.html.erb
@@ -2,7 +2,7 @@
 	.blog_header
 	{
 		height: 90px;
-		background-color: green;
+		/*background-color: green;*/
 	}
 	.blog_body
 	{
@@ -33,17 +33,17 @@
 		color: black;
 		/*height: 30;*/
 		margin: 2px 10px;
-		background-color: orange
+		/*background-color: orange*/
 	}
 	.blog_tags{
 		/*height: 25px;*/
 		margin: 2px 10px;
-		background-color: blue;
+		/*background-color: blue;*/
 	}
 	.blog_body{
 		/*height: 75px;*/
 		margin: 2px 10px;
-		background-color: green;
+		/*background-color: green;*/
 
 	}
 </style>
@@ -69,9 +69,9 @@
 				<div class="blog_title">
 					<div><%= link_to blog.title,blog_path(blog) %></div>
 				</div>
-				<div class="blog_tags"><%= blog.tags %></div>
+				<div class="blog_tags"><span style="color:gray">tags:<%= blog.tags %></span></div>
                 <% one_blog_body = sanitize strip_tags(blog.body) %>
-				<div class="blog_body"><%= one_blog_body.length<300 ? one_blog_body : one_blog_body[0,299]   %></div>
+				<div class="blog_body"><%= one_blog_body.length<300 ? one_blog_body : one_blog_body[0,299]+'...'   %></div>
 			</div>
 		<% end %>
 	</div>
