--- a/swBlog/app/views/blogs/new.html.erb
+++ b/swBlog/app/views/blogs/new.html.erb
@@ -27,8 +27,8 @@
 	}
 	.blog_body_new .blog_body_add_title
 	{
-		height: 100px;
-		background-color: #eee;
+		height: 60px;
+		background-color: red;
 	}
 	.blog_body_new .blog_body_category
 	{
@@ -62,7 +62,7 @@
 			<li>  
 	        	 <%= f.label :body,"内容" %>  
 	        	 <!-- <%= f.text_area :body, :class => 'ckeditor' %> -->
-	        	 <%= f.cktext_area :body, :class => 'someclass', :ckeditor => {:language => 'zh-ch'} %>
+	        	 <%= f.cktext_area :body, :class => 'someclass', :ckeditor => {:language => 'zh-cn',height:300} %>
 
 	     	 </li>
 			</div>
