--- a/swBlog/app/views/welcome/index.html.erb
+++ b/swBlog/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <style type="text/css">
 	body{
 		background-color: #333;
-		background-image: url(assets/try_search_bg.jpg);
+		background-image: url("<%= asset_path("try_search_bg.jpg") %>");
 		width: 100%;
 		height: 100%;
 		margin: 0 auto;
@@ -12,7 +12,7 @@
 		margin-left: 50px;
 	}
 	.search_icon{
-		background-image: url(assets/try_search_icon.png);
+		background-image: url("<%= asset_path("try_search_icon.png") %>");
 		background-size:100%;
 		background-repeat: no-repeat;
 		width: 60px;
@@ -38,7 +38,7 @@
 	.search_commit{
 		border: 0;
 		background-color: #fff;
-		background-image: url(assets/try_search_click.png);
+		background-image: url("<%= asset_path("try_search_click.png") %>");
 		background-size: 100%;
 		background-repeat: no-repeat;
 		background-position: center;
