--- a/swBlog/app/views/welcome/index.html.erb
+++ b/swBlog/app/views/welcome/index.html.erb
@@ -21,16 +21,17 @@
 		float: left;
 	}
 	.search-all-div form{
-		background-color: #fff;
+		background-color: transparent;
 		margin-top: 12px;
 		margin-left: 15px;
 		float: left;
+		height: 1000px;
 	}
 	.search_input{
 		border: 0;
-		height: 25px;
+		height: 30px;
 		width: 200px;
-		line-height: 25px;
+		line-height: 30px;
 		
 		
 		float: left;
@@ -42,8 +43,8 @@
 		background-size: 100%;
 		background-repeat: no-repeat;
 		background-position: center;
-		width: 29px;
-		height: 29px;
+		width: 30px;
+		height: 30px;
 		float: left;
 	}
 </style>
