--- a/swBlog/app/views/blogs/index.html.erb
+++ b/swBlog/app/views/blogs/index.html.erb
@@ -29,7 +29,7 @@
         overflow: hidden;
 	}
 	.blog_title{
-		font-size: 20px;
+		font-size: 18px;
 		color: black;
 		/*height: 30;*/
 		margin: 2px 10px;
@@ -67,7 +67,8 @@
 					<div></div>
 				</div> -->
 				<div class="blog_title">
-					<div><%= link_to blog.title,blog_path(blog) %></div>
+					<div><%= link_to blog.title,blog_path(blog) %><sup style="color:orange;">----<%= link_to blog.category.name %></sup>
+					</div>
 				</div>
 				<div class="blog_tags"><span style="color:gray">tags:<%= blog.tags %></span></div>
                 <% one_blog_body = sanitize strip_tags(blog.body) %>
