--- a/swBlog/app/views/layouts/application.html.erb
+++ b/swBlog/app/views/layouts/application.html.erb
@@ -76,9 +76,9 @@
         <!--</li>-->
       <!--</ul>-->
       <% if current_user %>
-        <form class="navbar-form navbar-left" role="search">
+        <form  action="<%= blogs_path %>" class="navbar-form navbar-left"  role="search">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="个人博客搜索">
+            <input type="text" class="form-control" placeholder="个人博客搜索"   value="<%= params[:my_blog_search_text] %>" name="my_blog_search_text">
           </div>
           <button type="submit" class="btn btn-default">搜索</button>
         </form>
