--- a/swBlog/app/views/blogs/show.html.erb
+++ b/swBlog/app/views/blogs/show.html.erb
@@ -20,10 +20,19 @@
  		float: none;
  	}
 </style>
-<h2><%= @blog.title %></h2>
+<h2><%= @blog.title %><sup style="font-size:14px;color:orange;">----<%= link_to @blog.category.name %></sup></h2>
 <div class="category_evaluate_div">
-	<div class="category_div"><span>分类： <span style="color:orange"><%= @blog.category.name %></span></span></div>
-	<div class="evaluate_div">赞: <br/>踩:</div>
+	<div class="category_div"><span>作者： <span style="color:orange"><%= @blog.user.login_in_nickname_or_others %></span></span></div>
+	<div class="evaluate_div">
+		<%= form_for(@blog,url: user_blog_path(@blog),method: 'put')  do |f| %>
+			<%= hidden_field_tag(:is_like, "1") %>
+			<%= f.submit "赞#{@is_like_count}" %>
+		<% end %>
+		<%= form_for(@blog,url: user_blog_path(@blog),method: 'put')  do |f| %>
+			<%= hidden_field_tag(:is_like, "-1") %>
+			<%= f.submit "踩#{@is_dislike_count}" %>
+		<% end %>
+	</div>
 </div>
 <br />
 <div class="tags_div">
