--- a/swBlog/app/views/blogs/index.html.erb
+++ b/swBlog/app/views/blogs/index.html.erb
@@ -66,7 +66,7 @@
 					<div></div>
 				</div> -->
 				<div class="blog_title">
-					<div><%= link_to blog.title,blog_path(blog) %><sup style="color:orange;">----<%= link_to blog.category.name %></sup>
+					<div><%= link_to blog.title,blog_path(blog) %><sup style="color:orange;">----<%= blog.category.name %></sup>
 					</div>
 				</div>
 				<div class="blog_tags"><span style="color:gray">tags:<%= blog.tags %></span></div>
