--- a/swBlog/app/views/blogs/show.html.erb
+++ b/swBlog/app/views/blogs/show.html.erb
@@ -22,7 +22,7 @@
 </style>
 <h2><%= @blog.title %><sup style="font-size:14px;color:orange;">----<%= @blog.category.name %></sup></h2>
 <div class="category_evaluate_div">
-	<div class="category_div"><span>作者： <span style="color:orange"><%= @blog.user.login_in_nickname_or_others %></span></span></div>
+	<div class="category_div"><span>分享者： <span style="color:orange"><%= @blog.user.login_in_nickname_or_others %></span></span></div>
 	<div class="evaluate_div">
 		<%= form_for(@blog,url: user_blog_path(@blog),method: 'put')  do |f| %>
 			<%= hidden_field_tag(:is_like, "1") %>
