--- a/swBlog/app/views/blogs/index.html.erb
+++ b/swBlog/app/views/blogs/index.html.erb
@@ -18,7 +18,7 @@
 	{
 		float: right;
 		width: 80%;
-		background-color: gray;
+		/*background-color: gray;*/
 	}
 	.blog_body_digest
 	{
@@ -56,7 +56,7 @@
 		<div><%= link_to "新增博客",new_blog_path %></div>
 		<div><%= link_to "选择语言",user_categories_path %></div>
 	</div>
-	<%= paginate @blogs %>
+	
 	<div class="blog_body_right">
 		<% @blogs.each do |blog|  %>
 			<div class="blog_body_digest">
@@ -73,8 +73,10 @@
                 <% one_blog_body = sanitize strip_tags(blog.body) %>
 				<div class="blog_body"><%= one_blog_body.length<300 ? one_blog_body : one_blog_body[0,299]+'...'   %></div>
 			</div>
+			<hr>
 		<% end %>
+		<%= paginate @blogs %>
 	</div>
-	<%= paginate @blogs %>
+	
 </div>
 <div class="blog_footer" ></div>
