--- a/swBlog/app/views/user_categories/index.html.erb
+++ b/swBlog/app/views/user_categories/index.html.erb
@@ -4,15 +4,15 @@
 </style>
 
 <div style ="height:50px">
-	<div style = "float: left; height: 0px; padding: 0px;">
-	  <h3 style = "margin-top: 15px">分类列表</h3>
+	<div style = "height: 0px; padding: 0px;text-align:center">
+	  <h3 style = "margin-top: 15px;">选择语言</h3>
 	</div>
 
 	<div style= "float: right">
 	    <div style = "float: right">
 	      <form action= "<%= user_categories_path %>" class="navbar-form navbar-right" role="search">
 	        <div class="form-group">
-	          <input type="text" class="form-control" placeholder= "姓名/手机号" value = "<%= params[:category_search_text] %>" name="category_search_text">
+	          <input type="text" class="form-control" placeholder= "语言搜索" value = "<%= params[:category_search_text] %>" name="category_search_text">
 	        </div>
 	        <button type="submit" class="btn btn-default">搜索</button>
 	      </form>
@@ -46,5 +46,4 @@
   </tbody>
 </table>
 <%= paginate @categories %>
-<%= @user_category_ids.inspect %>
 </div>
