--- a/swBlog/app/views/welcome/index.html.erb
+++ b/swBlog/app/views/welcome/index.html.erb
@@ -10,6 +10,7 @@
 		/*background-color: #fff;*/
 		margin-top: 50px;
 		margin-left: 50px;
+		margin-bottom: 800px;
 	}
 	.search_icon{
 		background-image: url("<%= asset_path("try_search_icon.png") %>");
