--- a/swBlog/app/views/welcome/index.html.erb
+++ b/swBlog/app/views/welcome/index.html.erb
@@ -10,7 +10,7 @@
 		/*background-color: #fff;*/
 		margin-top: 50px;
 		margin-left: 50px;
-
+		height: 900px;
 	}
 	.search_icon{
 		background-image: url("<%= asset_path("try_search_icon.png") %>");
@@ -27,7 +27,6 @@
 		margin-left: 15px;
 		float: left;
 		height: 50px;
-		margin-bottom: 800px;
 	}
 	.search_input{
 		border: 0;
