--- a/swBlog/app/views/welcome/index.html.erb
+++ b/swBlog/app/views/welcome/index.html.erb
@@ -20,6 +20,7 @@
 		height: 60px;
 		background-position: center;
 		float: left;
+		height: 900px;
 	}
 	.search-all-div form{
 		background-color: transparent;
