--- a/swBlog/app/views/welcome/index.html.erb
+++ b/swBlog/app/views/welcome/index.html.erb
@@ -10,7 +10,6 @@
 		/*background-color: #fff;*/
 		margin-top: 50px;
 		margin-left: 50px;
-		padding-bottom: 900px;
 	}
 	.search_icon{
 		background-image: url("<%= asset_path("try_search_icon.png") %>");
@@ -20,7 +19,6 @@
 		height: 60px;
 		background-position: center;
 		float: left;
-		height: 900px;
 	}
 	.search-all-div form{
 		background-color: transparent;
@@ -28,14 +26,13 @@
 		margin-left: 15px;
 		float: left;
 		height: 50px;
+		margin-bottom: 600px;
 	}
 	.search_input{
 		border: 0;
 		height: 35px;
 		width: 300px;
 		line-height: 30px;
-		height: 900px;
-		
 		float: left;
 	}
 	.search_commit{
