--- a/swBlog/app/views/layouts/application.html.erb
+++ b/swBlog/app/views/layouts/application.html.erb
@@ -115,8 +115,8 @@
 <footer class="footer">
       <div class="container">
         <div class="info">
-            <a href="#" target="_blank">关于网站</a>|<a href="#" target="_blank">联系我</a> |  
-            <a href="#" target="_blank">版权声明</a> |  
+            <a href="#" target="_blank">关于网站</a>|<a href="mailto:swfeiyang@gmail.com" target="_blank">联系我</a> |  
+            <a href="#" target="_blank">版权声明</a> 
             <br>
             本站部分文章、资源来自互联网，版权归原作者及网站所有，如果侵犯了您的权利，请及时致信告知我站.<br>
             版权声明：凡文章来源注明为本站的文章、图片、视频等信息，请在转载时保留本站链接。<br>
