不登陆无法查看博客的bug

--- a/swBlog/app/views/blogs/show.html.erb
+++ b/swBlog/app/views/blogs/show.html.erb
@@ -43,7 +43,7 @@
 <p><%= sanitize @blog.body %></p>
 <hr />
 <div style="margin-top: 50px;">
-	<% if @blog.user_id == current_user.id %>
+	<% if @blog.user_id == current_user.try(:id) %>
 		<%= link_to '编辑',edit_blog_path(@blog), class:"btn btn-defalut" %>
 	<% end %>
 </div>
