--- a/swBlog/app/views/user_categories/index.html.erb
+++ b/swBlog/app/views/user_categories/index.html.erb
@@ -9,6 +9,11 @@
     $(".select_this_category").change(function() {
     	$(this).next().click();
     });
+    $(function(){
+    	if (text) {
+    		alert(text);
+    	};
+    });
 }); 
 </script>
 
@@ -42,9 +47,9 @@
 	      <tr>
 	        <td><%= category.name %></td>
 	        <td>
-	        	<%= form_tag(user_category_path(category[:id]), method: "put" ) do |f| %>
+	        	<%= form_tag(user_category_path(category[:id]), method: "put", remote:true) do |f| %>
 	        		<%= check_box_tag "category[]",category.id, (@user_category_category_ids.present?) && @user_category_category_ids.include?(category.id), class: "select_this_category" %>
-	        		 <%= submit_tag '提交',class: "submit_change_category" %>
+	        		 <%= submit_tag '提交', remote: true,class: "submit_change_category" %>
 	        	<% end %>
 	        </td>
 	     </tr>
