重新整理结构

--- a/swBlog/app/views/blogs/show.html.erb
+++ b/swBlog/app/views/blogs/show.html.erb
@@ -44,6 +44,6 @@
 <hr />
 <div style="margin-top: 50px;">
 	<% if @blog.user_id == current_user.try(:id) %>
-		<%= link_to '编辑',edit_blog_path(@blog), class:"btn btn-defalut" %>
+		<%= link_to '编辑',edit_user_blog_path(@blog), class:"btn btn-defalut" %>
 	<% end %>
 </div>
