--- a/swBlog/app/views/blogs/index.html.erb
+++ b/swBlog/app/views/blogs/index.html.erb
@@ -53,7 +53,7 @@
 <div class="blog_body">
 	<div class="blog_body_left">
 		<div style="background-color: #ddd;">导航</div>
-		<div><%= link_to "新增博客",new_blog_path %></div>
+		<div><%= link_to "新增博客",new_user_blog_path %></div>
 		<div><%= link_to "选择语言",user_categories_path %></div>
 	</div>
 	
