--- a/swBlog/app/views/layouts/application.html.erb
+++ b/swBlog/app/views/layouts/application.html.erb
@@ -77,7 +77,7 @@
         <!--</li>-->
       <!--</ul>-->
       <% if current_user %>
-        <form  action="<%= blogs_path %>" class="navbar-form navbar-left"  role="search">
+        <form  action="<%= user_blogs_path %>" class="navbar-form navbar-left"  role="search">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="个人博客搜索"   value="<%= params[:my_blog_search_text] %>" name="my_blog_search_text">
           </div>
@@ -90,7 +90,7 @@
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">更多 <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><%= link_to "新增博客",new_blog_path %></li>
+            <li><%= link_to "新增博客",new_user_blog_path %></li>
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
             <li class="divider"></li>
