--- a/swBlog/app/views/user_blogs/index.html.erb
+++ b/swBlog/app/views/user_blogs/index.html.erb
@@ -1,2 +1,77 @@
-<h1>UserBlogs#index</h1>
-<p>Find me in app/views/user_blogs/index.html.erb</p>
+<style type="text/css">
+	.blog_header
+	{
+		height: 90px;
+		/*background-color: green;*/
+	}
+	.blog_body
+	{
+		/*height: 500px;*/
+	}
+	.blog_body_left
+	{
+		float: left;
+		width: 20%;
+		background-color: white;
+	}
+	.blog_body_right
+	{
+		float: right;
+		width: 80%;
+		/*background-color: gray;*/
+	}
+	.blog_body_digest
+	{
+		margin: 20px 15px;
+		/*height: 130px;*/
+		margin: 5px 5px;
+		background-color: white;
+        overflow: hidden;
+	}
+	.blog_title{
+		font-size: 18px;
+		color: black;
+		/*height: 30;*/
+		margin: 2px 10px;
+		/*background-color: orange*/
+	}
+	.blog_tags{
+		/*height: 25px;*/
+		margin: 2px 10px;
+		/*background-color: blue;*/
+	}
+	.blog_body{
+		/*height: 75px;*/
+		margin: 2px 10px;
+		/*background-color: green;*/
+
+	}
+</style>
+<div class="blog_header">
+    
+</div>
+<div class="blog_body">
+	<div class="blog_body_left">
+		<div style="background-color: #ddd;">导航</div>
+		<div><%= link_to "新增博客",new_user_blog_path %></div>
+		<div><%= link_to "选择语言",user_categories_path %></div>
+	</div>
+	
+	<div class="blog_body_right">
+		<% @blogs.each do |blog|  %>
+			<div class="blog_body_digest">
+				<div class="blog_title">
+					<div><%= link_to blog.title,blog_path(blog) %><sup style="color:orange;">----<%= blog.category.name %></sup>
+					</div>
+				</div>
+				<div class="blog_tags"><span style="color:gray">tags:<%= blog.tags %></span></div>
+                <% one_blog_body = sanitize strip_tags(blog.body) %>
+				<div class="blog_body"><%= one_blog_body.length<300 ? one_blog_body : one_blog_body[0,299]+'...'   %></div>
+			</div>
+			<hr>
+		<% end %>
+		<%= paginate @blogs %>
+	</div>
+	
+</div>
+<div class="blog_footer" ></div>
